--- a/introduction.html
+++ b/introduction.html
@@ -21,13 +21,14 @@
 		<a href="index.html">Overview</a><br/>
 		<a href="software.html">Software</a><br/>
 		<a href="lua.html">Lua Tutorial</a><br/>
-		<a href="https://github.com/grrrwaaa/gct753">GitHub</a><br/>
-		<a href="http://grrrwaaa.github.com/gct753/docs/reference.html">Reference</a><br/>
+		&gt;&gt; <a href="https://github.com/grrrwaaa/gct753">GitHub</a><br/>
+		&gt;&gt; <a href="http://grrrwaaa.github.com/gct753/docs/reference.html">Reference</a><br/>
 		<br>
 		<a href="introduction.html">Themes</a><br/>
 		<a href="artificial_life.html">Artificial Life</a><br/>
 		<a href="generative_art.html">Generative Art</a><br/>
 		<a href="cellular.html">Cellular Systems</a><br/>
+		<a href="evolutionary.html">Evolutionary Systems</a><br/>
 		
 	</div>
 	<div class="section"><h1>Themes</h1>
@@ -49,7 +50,6 @@
 </blockquote>
 </blockquote>
 <h2>Some inspiration</h2>
-<p><a href="http://www.youtube.com/watch?v=WFCvkkDSfIU">Here&#39;s something amazing about how our cells replicate</a>, and more animations by <a href="http://www.youtube.com/watch?v=yKW4F0Nu-UY&amp;list=PL3DB3C131CBCD2A0F&amp;index=5">Drew Berry</a></p>
 <p><a href="http://www.youtube.com/watch?v=Wl5rRGVD0QI">Tom Ray: the evolutionary biologist who created evolution in the CPU</a></p>
 <h2>Readings</h2>
 <p><a href="http://www.csse.monash.edu.au/~jonmc/research/Papers/TenQuestionsLJ-Preprint.pdf">Ten Questions Concerning Generative Computer Art. Jon McCormack, Oliver Bown,. Alan Dorin, Jonathan McCabe,. Gordon Monro and Mitchell Whitelaw. 2012</a></p>
