--- a/rewriting.html
+++ b/rewriting.html
@@ -21,13 +21,14 @@
 		<a href="index.html">Overview</a><br/>
 		<a href="software.html">Software</a><br/>
 		<a href="lua.html">Lua Tutorial</a><br/>
-		<a href="https://github.com/grrrwaaa/gct753">GitHub</a><br/>
-		<a href="http://grrrwaaa.github.com/gct753/docs/reference.html">Reference</a><br/>
+		&gt;&gt; <a href="https://github.com/grrrwaaa/gct753">GitHub</a><br/>
+		&gt;&gt; <a href="http://grrrwaaa.github.com/gct753/docs/reference.html">Reference</a><br/>
 		<br>
 		<a href="introduction.html">Themes</a><br/>
 		<a href="artificial_life.html">Artificial Life</a><br/>
 		<a href="generative_art.html">Generative Art</a><br/>
 		<a href="cellular.html">Cellular Systems</a><br/>
+		<a href="evolutionary.html">Evolutionary Systems</a><br/>
 		
 	</div>
 	<div class="section"><h1>Rewriting systems, L-systems</h1>
