--- a/evolutionary.html
+++ b/evolutionary.html
@@ -87,8 +87,23 @@
 <li>Sexual <strong>cross-over</strong> (or <strong>recombination</strong>): akin to sexual reproduction in biology. As a binary string, the child takes the first fraction from one parent, and the remainder from the other. For example, breeding the strings &quot;dog&quot; and &quot;cat&quot; could generate children such as &quot;dot&quot;, &quot;dat&quot;, &quot;cag&quot; and &quot;cog&quot;. </li>
 <li>Other variations (insertion, deletion, inversion) are less common, but have been used.</li>
 </ul>
+<h2>Evolutionary Art and Music</h2>
+<p>One of the central problems in evolutionary art and music is how to implement selection.</p>
+<ul>
+<li>A predefined fitness function. For this to be possible, a formal measure of aesthetic quality is required; but can we really do that?</li>
+<li>Interactive selection. Pioneered by Dawkins&#39; Biomorphs program and Karl Sims&#39; evolved images, in which several candidates are presented to human observers, who apply the selection manually. Also known as aesthetic selection. A problem here is that the human becomes the bottleneck of evolution, constraining population sizes and rates of evolution to very small scales. It may arguably also tend toward selecting for the aesthetic average rather than the remarkable.<ul>
+<li>An interesting variation is to make the selection continuous and implicit. Jon McCormack&#39;s Eden measured fitness globally according to how long gallery visitors remained in front of a particular evolving sub-population.</li>
+</ul>
+</li>
+<li>First evolve a population of artificial art critics, trained from human-evaluated examples, and then use these to apply selection criteria to a population of candidate artworks.</li>
+</ul>
+<p>Artificial co-evolution, where one population represents the candidate products, and the other population represents artificial critics.</p>
+<p>Karl Sims
+Scott Draves
+[1]    S. Draves, “Evolution and Collective Intelligence of the Electric Sheep,” The Art of Artificial Evolution, 2008.</p>
 <h3>Caveats</h3>
-<p>Artificial evolution generates results with randomness, without formal proofs. It may take a long time or a lot of processing power to find a satisfactory result, or may not reach a result at all.</p>
+<p>Artificial evolution generates results with randomness, without formal proofs. It may take a long time or a lot of processing power to find a satisfactory result, or may not reach a result at all. </p>
+<p>Fitness landscapes</p>
 </div>
 	
 	<div class="footer">
