--- a/cellular.html
+++ b/cellular.html
@@ -175,7 +175,8 @@
 <p>Since this creates structure at a single spatial scale, it can be elaborated by super-imposing several models at different spatial scales (different small and large radii). Or, by changing the radii dynamically over time (as in <a href="http://www.cc.gatech.edu/~turk/my_papers/reaction_diffusion.pdf">Greg Turk&#39;s famous paper</a>). McCabe&#39;s system uses several pre-defined scales, but selects which scale to apply for a particular cell according to which one currently shows the least local variation. </p>
 <p>Additionally, his system does not measure all cells within a radius; instead it selects cells at the radius distance and certain angular directions, creating cyclical symmetries in the result. For example, 3-fold symmetry may be used at a smaller scale, and 9-fold symmetry at a larger scale.</p>
 <h1>Assignment 1: Cellular Systems</h1>
-<p>The first assignment is to construct a new cellular system. You can start from one of the existing systems we have looked at and modify it, or design and create a new one to explore an idea you have; you can look through some of the different <em>variations on cellular systems</em> above and try to implement one. You might spend roughly a third of your time choosing what to try and designing, a third actually implementing it, and a third exploring it for interesting parameters, initial conditions, rule variations etc. If you end up with more than one system that is interesting, you can submit them all.</p>
+<p>The first assignment is to construct a new cellular system. You can start from one of the existing systems we have looked at and modify it, or design and create a new one to explore an idea you have; you can look through some of the different <em>variations on cellular systems</em> above and try to implement one. You might spend roughly a third of your time choosing what to try and designing, a third actually implementing it, and a third exploring it for interesting parameters, initial conditions, rule variations etc. If you end up with more than one system that is interesting, you can submit them all. </p>
+<p>If you had an idea that seemed interesting but was difficult to implement or did not lead to interesting results, submit that too (with an explanation of why you think it did not work or did not do what you expected); this is just as important a part of research (akin to disproving a hypothesis in science).</p>
 <p>Document your work using comments in the code. Note that in Lua, you can write long multi-line comments like this:</p>
 <pre><code class="lang-lua"><span class="comment">--[[
 This is a long comment
@@ -187,7 +188,7 @@ several lines
 <li>Your <strong>name</strong></li>
 <li>The <strong>date</strong></li>
 <li>The <strong>title</strong></li>
-<li>A <strong>description</strong> of the idea of the system, how it works, and why it is interesting, surprising, etc. What kinds of long-term behaviors it supports. </li>
+<li>A <strong>description</strong> of the idea of the system, how it works (or why it doesn&#39;t), and why it is interesting, surprising, etc (or why it didn&#39;t meet your expectations). What kinds of long-term behaviors it supports. </li>
 <li>A description of any <strong>interactions</strong> it supports (what the mouse does, what key presses do)</li>
 <li>A description of the <strong>technical realization</strong>. (Perhaps you tried a few different algorithms until it worked as expected?) If you were inspired by another system, mention it.</li>
 <li>Ideas for possible <strong>future extensions</strong> of the project.</li>
@@ -196,9 +197,9 @@ several lines
 <p>Send your final project as one (or more) Lua script(s) to my email address, on or before <strong>Sunday 31 March</strong>. </p>
 <p>Your assignment will be evaluted by these criteria:</p>
 <ul>
-<li><strong>Technical completeness</strong> (33%). If it works, how well it works (efficiency, accuracy). Also how clearly the code is structured and commented.</li>
-<li><strong>Aesthetic qualities</strong> (33%). How interesting the appearances and behaviors are. Perhaps the system behaves differently for different initial conditions or variations in rules and parameters; spend some time finding good start conditions and include them as options in the program (e.g. triggered by pressing keys). Write down how to use them, and why you think they are interesting.</li>
-<li><strong>Novel contribution</strong> (33%). This means creating something that we haven&#39;t built together in class, perhaps even something that has never been made before. The key here is not whether it works, but according to the creative qualities of the idea. Your ideas for future extensions will be evaluated too.</li>
+<li><strong>Technical completeness</strong> (33%). If it works, how well it works (efficiency, accuracy). Also how clearly the code is structured and commented. Even if it doesn&#39;t work, how well it was conceived and implemented. </li>
+<li><strong>Aesthetic qualities</strong> (33%). How interesting the appearances and behaviors are. Perhaps the system behaves differently for different initial conditions or variations in rules and parameters; spend some time finding good start conditions and include them as options in the program (e.g. triggered by pressing keys). Write down how to use them, and why you think they are interesting. If it doesn&#39;t work as expected or produce interesting results, then the evaluation here will be on how well you can articulate what you had hoped for, what aspects of that you think are missing, why you think they are missing, what you can suggest to resolve it, etc.</li>
+<li><strong>Novel contribution</strong> (33%). This means creating something that we haven&#39;t built together in class, perhaps even something that has never been made before. The key aspects here are the creative qualities of the idea. Your ideas for future extensions will be evaluated too.</li>
 </ul>
 </div>
 	
