--- a/evolutionary.html
+++ b/evolutionary.html
@@ -74,7 +74,7 @@
 <p>An artificial evolutionary system can be run by these steps:</p>
 <ol>
 <li><strong>Initialization</strong> of a &#39;seed&#39; population of genotypes</li>
-<li><strong>Development</strong> of phenotypes from the genotypes (often instantaneous)</li>
+<li><strong>Development</strong> of phenotypes from the genotypes </li>
 <li>Evaluation and <strong>selection</strong> of best/viable candidates of phenotypes, according to fitness criteria or ongong viability conditions</li>
 <li><strong>Reproduction</strong>, creating new genotypes (applying <strong>mutation</strong> and <strong>recombination</strong> for creative variety)</li>
 <li>Repeat from step (2) or terminate if a terminating condition is satisfied (such as sufficient fitness). </li>
@@ -86,7 +86,7 @@
 <p>The mechanisms of variation possible partly depend on the representation chosen. The two most common principles of variation in artificial evolution are naturally inspired:</p>
 <ul>
 <li>Random <strong>mutation</strong>; akin to errors copying DNA. If the genome is represented as a binary string, then random locations in the string may be replaced by new random characters. For example, a parent &quot;dog&quot; could produce children such as &quot;fog&quot;, &quot;dqg&quot;, and so on. Obviously some mutations will not create viable individuals.</li>
-<li>Sexual <strong>cross-over</strong> (or <strong>recombination</strong>): akin to sexual reproduction in biology. As a binary string, the child takes the first fraction from one parent, and the remainder from the other. For example, breeding the strings &quot;dog&quot; and &quot;cat&quot; could generate children such as &quot;dot&quot;, &quot;dat&quot;, &quot;cag&quot; and &quot;cog&quot;. </li>
+<li>Sexual <strong>cross-over</strong> (or <strong>recombination</strong>): akin to sexual reproduction in biology. As a binary string, the child takes the first fraction from one parent, and the remainder from the other. For example, breeding the strings &quot;dog&quot; and &quot;cat&quot; could generate children such as &quot;dot&quot;, &quot;dat&quot;, &quot;cag&quot; and &quot;cog&quot;. A more flexible system might also permit &quot;doat&quot;, &quot;caog&quot;, &quot;dt&quot;, etc. </li>
 <li>Other variations (insertion, deletion, inversion) are less common, but have been used.</li>
 </ul>
 <h2>Evolutionary Art and Music</h2>
