--- a/agent.html
+++ b/agent.html
@@ -35,22 +35,69 @@
 	</div>
 	<div class="section"><h1>Multi-agent systems (agent-based models)</h1>
 <h2>What is an agent?</h2>
-<p>Sensors, actuators, internal processing (and storage), goals/motivations, metabolism/growth</p>
-<h2>Random walks in nature</h2>
-<p>Distributed computing</p>
-<p>Behavioral systems in cognitive science, AI &amp; robotics</p>
+<p>An autonomous agent interacts within an environment populated by other agents, but behaves independently without taking direct commands from other agents nor a global planner or leader. Agent-based models typically operate in parallel within a spatial environment, in which interactions are usually limited to local distances, rather like cellular automata. But unlike CA, which roots a program in a particular spatial location (the cell), an agent-based program is typically mobile. </p>
+<p>The agent abstraction has arisen somewhat independently in different fields, thus the definition of an agent can vary widely. The following components are usually present:</p>
+<ul>
+<li><strong>Properties</strong>: Persistent but variable features of an agent, such as size, color, speed, direction, energy level, and so on. </li>
+<li><strong>Input</strong>: Limited capabilities of sensing (or receiving messages from) the environment</li>
+<li><strong>Output</strong>: Limited capabilities of performing actions on (or sending messages to) the environment, or its own properties. Typically this includes the ability to move through space.</li>
+<li><strong>Processing</strong>: An information processing capacity to select actions in response to inputs. This capacity may also include information storage (memory).</li>
+<li><strong>Motivations</strong>: The agent may also incorporate explicit goals or purposes in the form of self-evaluation and self-adaptation; or these may be implict in the design of the processing algorithm.</li>
+</ul>
+<p>As a biological approximation, an agent could refer to anything from individual proteins, viruses, cells, bacteria, organisms, or population groups. Agent systems also share similarities with particle systems.</p>
+<p>Just like CA, at times, the self-organizing behavior of systems of even relatively simple agents can be unpredictable, complex, and generate new emergent structures of order. </p>
+<h2>Vehicles</h2>
+<p>Braitenberg, V. (1984). Vehicles: Experiments in synthetic psychology. Cambridge, MA: MIT Press. </p>
+<blockquote>
+<p>A Braitenberg vehicle is an agent that can autonomously move around. It has primitive sensors (measuring some stimulus at a point) and wheels (each driven by its own motor) that function as actuators or effectors. A sensor, in the simplest configuration, is directly connected to an effector, so that a sensed signal immediately produces a movement of the wheel. Depending on how sensors and wheels are connected, the vehicle exhibits different behaviors (which can be goal-oriented).  <a href="http://en.wikipedia.org/wiki/Braitenberg_vehicle">wikipedia</a></p>
+</blockquote>
+<p>Braitenberg argues that his extraordinarily simple mechanical vehicles manifest behaviors that appear identifiable as fear, aggression, love, foresight, and optimism.</p>
+<p>Casey Reas (co-author of Processing) has used populations of Braitenberg-inspired vehicles to create artworks based on their combined paths.</p>
+<h3>Steering Behaviors</h3>
+<p>Reynolds&#39; vehicles, from <a href="http://www.red3d.com/cwr/steer/gdc99/">&quot;Steering Behaviors for Autonomous Characters</a>, breaks movement into three layers:</p>
+<ul>
+<li>Action Selection: selecting actions to perform according to environmental input and goals to achieve. </li>
+<li>Steering: path determination according to the action selected. Many different behaviors can be used; a simple particle-system model could be <code>steering force = desired_velocity - current_velocity</code>.</li>
+<li>Locomotion: conversion of steering into actual movement.</li>
+</ul>
+<p>The paper is well worth exploring as a collection of patterns for autonomous agent movements; and presents the elements that make up his simulation of flocking behavior.</p>
+<h3>Random walks in nature</h3>
+<p>A <strong>random walk</strong> involves small random deviations to steering. This produces a <strong>random walk</strong> or <strong>Brownian motion</strong>, a form of movement that is widely utilized by nature. In Reynolds&#39; paper it is the <em>wander</em> steering strategy.</p>
 <h3>Boids, flocking, swarms</h3>
-<h3>Vehicles</h3>
-<p>Reas&#39; vehicles</p>
+<p>In the late 1980s Reynolds proposed a model of animal motion to model flocks, herds and schools, which he named <em>boids</em>. Each boid follows a set of rules based on simple principles:</p>
+<ul>
+<li><strong>Avoidance</strong>: Move away from other boids that are too close (avoid collision)</li>
+<li><strong>Copy</strong>: Fly in the same general direction as other nearby boids</li>
+<li><strong>Center</strong>: Move toward the center of the flock (avoid exposure)</li>
+</ul>
+<p>Gary Flake also recommends:</p>
+<ul>
+<li><strong>View</strong>: Move laterally away from any boid blocking the view</li>
+</ul>
+<p>To make this more realistic, we can consider that each boid can only perceive other boids within a certain distance and viewing angle. We should also restrict how quickly boids can change direction and speed (to account for momentum). Additionally, the avoidance rule may carry greater <em>weight</em> or take precedence over the other rules.</p>
+<p>Evidently the <em>properties</em> of a boid (apart from location) include direction and speed. It could be assumed that viewing angle and range are shared by all boids, or these could also vary per individual. The <em>sensors</em> of a boid include an ability to detect the density of boids in different directions (to detect the center of the flock), as well as the average speed and direction of boids, within a viewable area. The <em>actions</em> of a boid principally are to alter the direction and speed of flight. </p>
+<h2>Environmental interaction</h2>
+<h3>Termites</h3>
+<p>Mitchel Resnick&#39;s termite model is a random walker in a space that can contain woodchips, in which each termite can carry one woodchip at a time. The program for a termite looks something like this:</p>
+<ul>
+<li>Look at the space just in front of me</li>
+<li>If it is empty, move forward and randomly change direction (random walk)</li>
+<li>Else if it is occupied by a woodchip:<ul>
+<li>If I am carrying a wood chip, drop mine where I am and turn around</li>
+<li>Else move forward and pick up the woodchip</li>
+</ul>
+</li>
+</ul>
+<p>Over time, the termites begin to collect the woodchips into small piles, which gradually coalesce into a single large pile of chips.</p>
+<h3>Chemotaxis</h3>
+<h3>Ant colonies (stigmergy)</h3>
+<h3>PSO</h3>
+<h2>Action selection systems</h2>
+<h3>Subsumption architecture</h3>
 <h3>Neural networks</h3>
 <p>The neuron, von Neumann, biological &amp; artificial plasticity, artificial neural networks (ANNs), supervised, unsupervised &amp; reinforcement learning.</p>
-<h3>Subsumption architecture</h3>
 <h3>Complex adaptive systems</h3>
 <h3>Game theory</h3>
-<h2>Agent-environment interaction</h2>
-<p>Chemotaxis</p>
-<p>Ant colonies (stigmergy)</p>
-<p>PSO</p>
 </div>
 	
 	<div class="footer">
