--- a/agent.html
+++ b/agent.html
@@ -48,13 +48,15 @@
 <p>Just like CA, at times, the self-organizing behavior of systems of even relatively simple agents can be unpredictable, complex, and generate new emergent structures of order. </p>
 <h2>Vehicles</h2>
 <p>Braitenberg, V. (1984). Vehicles: Experiments in synthetic psychology. Cambridge, MA: MIT Press. </p>
+<p><img src="http://www.ini.uzh.ch/~conradt/research/BraitenbergVehicle/Braitenberg%20Vehikels_files/BVinh.jpg" alt="Vehicle"></p>
 <blockquote>
 <p>A Braitenberg vehicle is an agent that can autonomously move around. It has primitive sensors (measuring some stimulus at a point) and wheels (each driven by its own motor) that function as actuators or effectors. A sensor, in the simplest configuration, is directly connected to an effector, so that a sensed signal immediately produces a movement of the wheel. Depending on how sensors and wheels are connected, the vehicle exhibits different behaviors (which can be goal-oriented).  <a href="http://en.wikipedia.org/wiki/Braitenberg_vehicle">wikipedia</a></p>
 </blockquote>
 <p>Braitenberg argues that his extraordinarily simple mechanical vehicles manifest behaviors that appear identifiable as fear, aggression, love, foresight, and optimism.</p>
-<p>Casey Reas (co-author of Processing) has used populations of Braitenberg-inspired vehicles to create artworks based on their combined paths.</p>
+<p>Casey Reas (co-author of Processing), Yanni Loukissas, and many others have used populations of Braitenberg-inspired vehicles to create artworks based on their combined paths.</p>
+<p><img src="http://reas.com/tissue_p/reas_tissue_p_13.jpg" alt="Reas&#39; Tissue"></p>
 <h3>Steering Behaviors</h3>
-<p>Reynolds&#39; vehicles, from <a href="http://www.red3d.com/cwr/steer/gdc99/">&quot;Steering Behaviors for Autonomous Characters</a>, breaks movement into three layers:</p>
+<p>Reynolds&#39; vehicles, from <a href="http://www.red3d.com/cwr/steer/gdc99/">Steering Behaviors for Autonomous Characters</a>, breaks movement into three layers:</p>
 <ul>
 <li>Action Selection: selecting actions to perform according to environmental input and goals to achieve. </li>
 <li>Steering: path determination according to the action selected. Many different behaviors can be used; a simple particle-system model could be <code>steering force = desired_velocity - current_velocity</code>.</li>
