--- a/evolutionary.html
+++ b/evolutionary.html
@@ -100,12 +100,17 @@
 <li>First evolve a population of artificial art critics, trained from human-evaluated examples, and then use these to apply selection criteria to a population of candidate artworks.</li>
 </ul>
 <p>Artificial co-evolution, where one population represents the candidate products, and the other population represents artificial critics.</p>
+<p><img src="http://www.karlsims.com/papers/ksf11.gif" alt="Karl Sims">
+See <a href="http://www.karlsims.com/genetic-images.html">Karl Sims&#39; Genetic Images</a>.</p>
 <p>Karl Sims
 Scott Draves
 [1]    S. Draves, “Evolution and Collective Intelligence of the Electric Sheep,” The Art of Artificial Evolution, 2008.</p>
 <h3>Caveats</h3>
 <p>Artificial evolution generates results with randomness, without formal proofs. It may take a long time or a lot of processing power to find a satisfactory result, or may not reach a result at all. </p>
 <p>Fitness landscapes</p>
+<hr>
+<h2>Discussion examples</h2>
+<p><a href="http://boxcar2d.com/">Evolving 2D cars</a></p>
 </div>
 	
 	<div class="footer">
