--- a/agent.html
+++ b/agent.html
@@ -92,6 +92,11 @@
 </ul>
 <p>Over time, the termites begin to collect the woodchips into small piles, which gradually coalesce into a single large pile of chips.</p>
 <h3>Chemotaxis</h3>
+<blockquote>
+<p>Chemotaxis is the phenomenon whereby somatic cells, bacteria, and other single-cell or multicellular organisms direct their movements according to certain chemicals in their environment. This is important for bacteria to find food (for example, glucose) by swimming towards the highest concentration of food molecules, or to flee from poisons (for example, phenol). In multicellular organisms, chemotaxis is critical to early development (e.g. movement of sperm towards the egg during fertilization) and subsequent phases of development (e.g. migration of neurons or lymphocytes) as well as in normal function. <a href="https://en.wikipedia.org/wiki/Chemotaxis">wikipedia</a></p>
+</blockquote>
+<p>A <a href="http://www.youtube.com/watch?v=ZV5CfOkV6ek">video example of chemotaxis in E. coli</a>.</p>
+<p>A variety of other <em>taxes</em> worth exploring can be found on the <a href="http://en.wikipedia.org/wiki/Taxis#Aerotaxis">wikipedia page</a>.</p>
 <h3>Ant colonies (stigmergy)</h3>
 <h3>PSO</h3>
 <h2>Action selection systems</h2>
@@ -101,6 +106,51 @@
 <p>The neuron, von Neumann, biological &amp; artificial plasticity, artificial neural networks (ANNs), supervised, unsupervised &amp; reinforcement learning.</p>
 <h3>Complex adaptive systems</h3>
 <h3>Game theory</h3>
+<h1>Assignment 2: Agent Systems</h1>
+<p>The second assignment is to construct a new agent-based system. You can start from one of the existing systems we have looked at and modify it, or design and create a new one to explore an idea you have. The agents should implement local interactions using one or both of:</p>
+<ul>
+<li>Sensing and responding to other nearby (locally visible) agents</li>
+<li>Local reading and/or writing to one or more fields</li>
+</ul>
+<p>Your agents should also implement:</p>
+<ul>
+<li>Action selection (responding to context in order to choose between strategies)</li>
+<li>Steering (implementing strategies by deriving and applying forces)</li>
+<li>Locomotion (implementing these forces to move the agents)</li>
+</ul>
+<p>You should also try adding at least one of the following:</p>
+<ul>
+<li>More than one type of agent (e.g. predator and prey)</li>
+<li>Birth and death</li>
+<li>Field dynamics (a field that changes over time)</li>
+<li>Keyboard and mouse interaction</li>
+<li>Sound</li>
+</ul>
+<p>You might spend roughly a third of your time choosing what to try and designing, a third actually implementing it, and a third exploring it for interesting parameters, initial conditions, variations etc. If you end up with more than one system that is interesting, you can submit them all. If you had an idea that seemed interesting but was difficult to implement or did not lead to interesting results, submit that too (with an explanation of why you think it did not work or did not do what you expected); this is just as important a part of research.</p>
+<p>Document your work using comments in the code. Note that in Lua, you can write long multi-line comments like this:</p>
+<pre><code class="lang-lua"><span class="comment">--[[
+This is a long comment
+that runs over
+several lines
+--]]</span></code></pre>
+<p>At the top of your code, there should be a long comment including:</p>
+<ul>
+<li>Your <strong>name</strong></li>
+<li>The <strong>date</strong></li>
+<li>The <strong>title</strong></li>
+<li>A <strong>description</strong> of the idea of the system, how it works (or why it doesn&#39;t), and why it is interesting, surprising, etc (or why it didn&#39;t meet your expectations). What kinds of long-term behaviors it supports. </li>
+<li>A description of any <strong>interactions</strong> it supports (what the mouse does, what key presses do)</li>
+<li>A description of the <strong>technical realization</strong>. (Perhaps you tried a few different algorithms until it worked as expected?) If you were inspired by another system, mention it.</li>
+<li>Ideas for possible <strong>future extensions</strong> of the project.</li>
+</ul>
+<p>Please also comment all the important operations in the code. Please also try to use helpful variable names, e.g. <code>width</code> is more communicative than <code>var3</code>.</p>
+<p>Send your final project as one (or more) Lua script(s) to my email address, on or before <strong>Sunday 28th April</strong>. </p>
+<p>Your assignment will be evaluted by these criteria:</p>
+<ul>
+<li><strong>Technical completeness</strong> (33%). If it works, how well it works (efficiency, accuracy). Also how clearly the code is structured and commented. Even if it doesn&#39;t work, how well it was conceived and implemented. </li>
+<li><strong>Aesthetic qualities</strong> (33%). How interesting the appearances and behaviors are. Perhaps the system behaves differently for different initial conditions or variations in rules and parameters; spend some time finding good start conditions and include them as options in the program (e.g. triggered by pressing keys). Write down how to use them, and why you think they are interesting. If it doesn&#39;t work as expected or produce interesting results, then the evaluation here will be on how well you can articulate what you had hoped for, what aspects of that you think are missing, why you think they are missing, what you can suggest to resolve it, etc.</li>
+<li><strong>Novel contribution</strong> (33%). This means creating something that we haven&#39;t built together in class, perhaps even something that has never been made before. The key aspects here are the creative qualities of the idea. Your ideas for future extensions will be evaluated too.</li>
+</ul>
 </div>
 	
 	<div class="footer">
