--- a/evolutionary.html
+++ b/evolutionary.html
@@ -109,8 +109,10 @@ Scott Draves
 <p>Artificial evolution generates results with randomness, without formal proofs. It may take a long time or a lot of processing power to find a satisfactory result, or may not reach a result at all. </p>
 <p>Fitness landscapes</p>
 <hr>
+<p>Why use reproduction for evolution? In the face of an unpredictable environment, we cannot know which strategy will be best; we can try small variations, and hedge our bets by making very many of them (population diversity). An individual loss is not catastrophic, but a few successes can be learned from. Furthermore, the face of unpredictibility implies that what was true today may not be tomorrow, so the flexibility to avoid timeless commitment is also a good strategy; but the inheritance of choices is a useful option when the environment retains some stability. If the world were fully predictable, a rational, teleological, monothematic strategy would be preferable. But the world isn&#39;t totally random either (if it was, there would be no valid strategy worth pursuing.) Red queen.</p>
 <h2>Discussion examples</h2>
 <p><a href="http://boxcar2d.com/">Evolving 2D cars</a></p>
+<p><a href="https://www.youtube.com/watch?feature=player_embedded&amp;v=z9ptOeByLA4">Evolving soft robots</a></p>
 </div>
 	
 	<div class="footer">
