--- a/symbol.html
+++ b/symbol.html
@@ -46,34 +46,67 @@
 <li>A set (P) of <em>rewriting</em> or <em>production rules</em> to specify how each symbol is transformed to other symbols, at each production step. A rule converts a <em>predecessor</em> symbol into <em>successor</em> symbols.</li>
 <li>A process of applying these rules in parallel, step by step until no more productions can be applied.</li>
 </ul>
-<p>For example, if the alphabet comprises <code>{ a, b }</code>, the rules include <code>a -&gt; aba</code> and <code>abb -&gt; nil</code>, and the start symbol is <code>a</code> then a sequence of productions could proceed as follows:</p>
-<pre><code class="lang-lua">    a        <span class="comment">-- apply rule 1</span>
-    aba        <span class="comment">-- apply rule 1 (twice)</span>
-    abbab    <span class="comment">-- apply rule 2, and rule 1</span>
-    abb        <span class="comment">-- apply rule 2</span>
-    <span class="keyword">nil</span>        <span class="comment">-- no more productions applicable</span></code></pre>
+<p>For example, if the alphabet comprises <code>{ &quot;B&quot;, &quot;F&quot;, &quot;+&quot;, &quot;-&quot;, &quot;[&quot;, &quot;]&quot; }</code>, the rules include <code>F -&gt; FF</code> and <code>B -&gt; F[-B]+B</code>, and the start symbol is <code>B</code> then a sequence of productions could proceed as follows:</p>
+<pre><code class="lang-lua">    B                        
+    <span class="comment">-- apply rule 1:</span>
+    F[-B]+B                    
+    <span class="comment">-- apply rule 1 (twice), and rule 2:</span>
+    FF[-F[-B]+B]+F[-B]+B        
+    <span class="comment">-- apply rule 1 three times, rule 1 four times:</span>
+    FFFF[-FF[-F[-B]+B]+F[-B]+B]+FF[-F[-B]+B]+F[-B]+B        
+    <span class="comment">-- etc.</span></code></pre>
+<p>Notice that any symbol that is not a predecessor of a production rule is passed through unchanged (it is not removed). </p>
+<h3>Turtle graphics</h3>
 <p>One of the simplest ways to use rewriting sytems for art and design is to interpret the produced strings as instructions for another program. The classic example is using them as instructions for a &quot;turtle graphics&quot; interpreter. </p>
 <p>For example, using the following system:</p>
-<pre><code class="lang-lua">    <span class="comment">-- possible symbols:</span>
-    alphabet = { <span class="string">"F"</span>, <span class="string">"+"</span>, <span class="string">"-"</span> }
-    <span class="comment">-- just one rule: replace "F" with "F+F--F+F"</span>
-    rule[<span class="string">"F"</span>] = <span class="string">"F+F--F+F"</span>
+<pre><code class="lang-lua">    <span class="comment">-- just one rule: replace "F" with "F+F--F+F"</span>
+    rules[<span class="string">"F"</span>] = <span class="string">"F+F--F+F"</span>
     <span class="comment">-- start with:</span>
-    start = <span class="string">"F"</span></code></pre>
+    S = <span class="string">"F"</span></code></pre>
 <p>If we interpret the &quot;F&quot; symbol to mean &quot;move forward&quot;, and the &quot;+&quot; and &quot;-&quot; symbols to mean turn left and right by 60 degrees, then each successive application of this rule generates a successive iteration of the Koch curve fractal:</p>
 <p><img src="img/koch.jpg" alt="Iterations of the Koch curve fractal"></p>
 <h3>Bracketed systems</h3>
-<p>By adding push <code>&quot;[&quot;</code> and pop <code>&quot;]&quot;</code> symbols to save/restore graphics state (position, orientation etc.), the graphics interpreter can easily render branched structures such as trees and ferns.</p>
-<h3>Stochastic systems</h3>
-<h3>Circuit systems</h3>
+<p>By adding push <code>&quot;[&quot;</code> and pop <code>&quot;]&quot;</code> symbols to save/restore graphics state (position, orientation etc.), the graphics interpreter can render branched structures such as trees and ferns. The result is further improved by reducing the length of each line according to the bracketed recursion depth.</p>
+<h3>Context-sensitive formal languages</h3>
+<p>An alphabet and production rules specify a formal language. In 1959 Noam Chomsky identified a hierarchy of four types of formal languages. They rest on the concept of <em>terminal</em> and <em>non-terminal</em> symbols, where a symbol is terminal if it cannot be further rewritten. Nonterminal symbols, which can be further rewritten, are normally indicated using upper case letters (A, B, C) and terminal symbols by lowercase letters (a, b, c). </p>
+<p>Each set in the hierarchy contains those above it:</p>
+<ol>
+<li><strong>Regular (Type-3):</strong> the predecessors of rules are a single nonterminal, the successors are a single terminal possibly followed by a single nonterminal, e.g. A -&gt; Ab or A -&gt; B.</li>
+<li><strong>Context-free (Type-2):</strong> the predecessors are a single nonterminal, and the sucessors can be any string of terminals and nonterminals. </li>
+<li><strong>Context-sensitive (Type-1):</strong> the predecessors contain multiple symbols (including at least one nonterminal), and the sucessor is a copy with the nonterminal replaced by an arbitrary string of nonterminals. E.g. aBc -&gt; aBbc, Ab -&gt; aaab, abcD -&gt; abcF, etc. They are therefore akin to Type-2 rules except with additional conditions regarding neighboring symbols (which remain unchanged).</li>
+<li><strong>Unrestricted (Type-0):</strong> predecessors and successors can both be any finite sequence of symbols without restriction.</li>
+</ol>
+<p>So far we have considered only regular and context-free formal languages, since we have been restricted to single nonterminal symbols on the left-hand side (predecessors). Clearly, as a biological model (where the string is the phenotype and the production rules are genotype), our system should be context sensitive. Context would imply environmental conditions as well as neighbor cell signaling. </p>
+<p>In order to support context-sensitive languages, we will need more powerful pattern-matching capabilities, and need extra care to handle ambiguous situations. E.g. we must be careful to consider longer patterns before shorter ones, to ensure that e.g. <code>aba</code> matches a rule <code>aba -&gt; abba</code> rather than the rule <code>a -&gt; b</code>. That is, our set of rules must now form a list (rather than a set), which is ordered by <em>priority</em>. </p>
 <h3>Parametric systems</h3>
-<h3>Context-sensitive systems</h3>
-<p>Signals and regulation.</p>
-<h3>Shape grammars</h3>
-<h3>Non-symbolic fractals</h3>
-<p>Fractal structures do not need to use symbolic rewriting. <a href="https://www.youtube.com/watch?v=FEnI_JPL6I0">Here</a> is an example of a fractal tree structure created through simple video feedback.</p>
-<h3>The evo-devo revolution</h3>
-<p>Cell signaling and regulatory networks.</p>
+<p>A <strong>parametric</strong> L-system embeds parameters (such as line length and rotation angle) into the symbols, and sucessors may modify these parameter values. For example, the rule <code>F(x) -&gt; F(x*2)</code> transforms a forward step into a forward step of twice the length.</p>
+<p>A <strong>conditional parametric</strong> L-system extends this to incorporate conditions, such that the subsitution only occurs if the condition is true. For example, <code>F(x : x &lt; 10) -&gt; F(x*2)</code> transforms a forward step into a forward step of twice the length, only if the initial length was less than 10. </p>
+<p>In both cases, our pattern matching system now needs to be able to handle classes of symbols (or at least, ignore anything between parentheses). </p>
+<h3>Stochastic systems</h3>
+<p>So far our systems are deterministic, and will always reproduce the same results after a fixed number of steps. To create a more natural-looking result, we can introduce non-determinism:</p>
+<ul>
+<li>Into the interpreter (by adding small deviations to the turtle, for example). This will remove the stark repetition, but still preserves topological symmetry.</li>
+<li>Into the production rules. This can generate new topologies. </li>
+</ul>
+<p>A <strong>stochastic</strong> L-system does the latter: for a given non-terminal predecessor, there may be several successor strings which are selected at random (possibly according to weights). Or, if the rules are listed by priority, each rule can have a probablity of being ignored.</p>
+<h2>Evo-Devo</h2>
+<p>L-Systems are difficult to predict and control: it is difficult to infer from an L-system definition and interpreter what the results will be, since (like cellular systems) the interactions are local but the consequences are global. Note that nature faces the same challenge: it cannot predict what changes to a genotype will result is viable or better phenotypes, and must proceed by trial and error (within the scope offered by development). Biologists exploring the mechanisms of development and generation of variation within it, and the relationship with evolutionary selection, work within the relatively new discipline of <em>evolutionary development</em> or &quot;evo-devo&quot;. </p>
+<p>The role of development in the generation of variation is equally important for artificial evolution, however it has been less thoroughly explored. Two lessons from the biologists:</p>
+<ul>
+<li>Development is not just a compact representation of a phenotype, but can be crucial to the generation of complex systems.</li>
+<li>The recent discovery that widely different species re-use the same developmental genes and mechanisms. This perhaps suggests that finding a good set of re-usable mechanisms for long-term evolvability (continuous generation of selectable novelty) is not an easy task. </li>
+<li>Development is not a one-way process, under command of the genome: factors in the environment can activate or inhibit parts of the genome (and parts of a genome can activate and inhibit other parts) in a complex <em>regulatory network</em>, and the state of the environment can affect the results of actions of the genome. In some cases the genome itself may not even be fixed. In part this environment is also inherited from an organisms&#39; parents. </li>
+<li>Development is ultimately working within the limits of a physical, chemical system, with entropic tendencies, self-organizing potential, noisy behavior, etc.</li>
+</ul>
+<p>Artificial Evo-Devo systems could be categorized as follows:</p>
+<ul>
+<li>The developmental process is hand-written, and evolution only works on parameters for this system. This is amounts to a simple genotype-phenotype map. </li>
+<li>Mechanims of development are encoded in the genotype, but in a fixed sequence (a fixed order with a fixed number of applications). This is suitable for evolving optimal L-systems for a given pattern, for example.</li>
+<li>The genotype encodes the sequence of applications of hand-written development mechanisms, as used for example in genetic programming.</li>
+<li>Both the basic mechanisms and the sequence of applications are encoded in the genotype and are therefore subject to evolution. Obviously the space of exploration is much larger and less predictable, but the challenge of finding suitable primitives and representations is difficult.</li>
+</ul>
+<p>Whether it is parameters, sequence, mechanisms (or several) that are to be evolved, they must all be represented in the genome in forms that can be inherited, with additional mechanisms for generating variation (e.g. mutations). That is, each one of these elements must be represented symbolically as data (e.g. as strings, trees or matrices of symbols, which may be as low-level as binary form or as high-level as readable text). </p>
+<hr>
 <h2>Artificial chemistries</h2>
 <p>Autonomous structure and self-organization, emergence of life. </p>
 <h3>Fontana&#39;s Alchemy</h3>
