--- a/index.html
+++ b/index.html
@@ -19,11 +19,15 @@
 	<div class="header">
 		<h1>GCT 633</h1>
 		<a href="index.html">Overview</a><br/>
+		<a href="http://github.com/grrrwaaa/gct633">&gt;&gt; GitHub</a><br/>
 		
 	</div>
 	<div class="section"><h1>GCT633: Audio and Multimedia Programming</h1>
 <p>KAIST GSCT Fall 2013<br>Instructor: Dr. Graham Wakefield (<a href="http://www.grahamwakefield.net">grrrwaaa@gmail.com</a>)<br>Hours: Tue/Thu 14:30 - 16:00<br>Location: N25 3239<br>Language: English<br>Credit: 3<br>Web: <a href="http://grrrwaaa.github.com/gct633/">http://grrrwaaa.github.com/gct633/</a></p>
 <h2>Overview</h2>
+<p>This course explores the joy of writing software for audio and media processing, including some of the well-established (and some of the not so well-established) techniques, how to overcome the many challenges it poses, and what potentials for novel research can be encountered.</p>
+<p>The course will first focus on audio. Although low-dimensional, audio programming can be surprisingly demanding. New data must be generated at reliable, steady rates of forty thousand samples per second or better, and latencies must remain low for musical sensitivity. It occupies a fascinating boundary between the apparently continuous (analog) but actually discrete (digital), and brings software architecture and user-experience issues to the fore in the mapping of perceptual/musical concepts to actual implementations. The course will then broaden to bring these concepts to bear on other media domains, including 2D image processing, 3D rendering and interactive sensor stream processing (such as from the Microsoft Kinect).</p>
+<p>To approach such a broad subject more concretely we may focus on a particular application area such as web-based platforms, immersive environments, or live-coding systems (to be confirmed), and we may also restrict ourselves to specific programming technologies (to be confirmed). </p>
 <h3>Format</h3>
 <p>Theoretical issues, technical models, and exemplary works are presented in lecture sessions, and implemented during lab sessions. Toward the end of the course lab sessions will be oriented towards helping students with their final projects. Lecture and course materials, including the software engine, will be presented and disseminated through the class web-site.</p>
 <h3>Objectives</h3>
@@ -47,50 +51,9 @@
 <li>Limitations on course retaking, if any: Some prior programming experience.</li>
 </ul>
 <h3>Materials</h3>
-<p>A selection of key papers will be disseminated during the course, in addition to the online materials.</p>
-<h2>Tentative schedule</h2>
-<h3>Week 1</h3>
-<p><strong>Topics:</strong> Course overview. Introduction to biologically-inspired computation and artificial life art. Introduction to major themes, presentation of representative works. Presentation of the software engine used for labs and assignments.</p>
-<p><strong>Readings:</strong> Selected readings (Mitchell Whitelaw, Simon Penny, Sommerer &amp; Mignonneau, Karl Sims)</p>
-<h3>Week 2</h3>
-<p><strong>Topics:</strong> Automata theory. Lattice automata, cellular automata, the Game of Life. 
-Dynamic systems, reaction-diffusion systems, chaotic and dissipative structures. Implementations following Conway, Turing.</p>
-<p><strong>Readings:</strong> Readings from the course books. Selections from Wolfram, Turing, Prigogine. </p>
-<h3>Week 3</h3>
-<p><strong>Topics:</strong> Conceptual issues: emergence and the mechanism-vitalism debate, self-organization in discrete and continuous systems, Wolfram’s classes of CA and Langton’s edge of chaos. Implementations following Wolfram, Langton. </p>
-<p><strong>Readings:</strong> Readings from the course books. Summary texts (Penny, Whitelaw etc.)</p>
-<p><strong><em>Assignment 1:</em></strong> Variations on the Cellular Automaton.</p>
-<h3>Weeks 4-5</h3>
-<p><strong>Topics:</strong> Evolutionary models. Genotype and phenotype representations. Optimizing selection, aesthetic selection, co-evolutionary and ecosystemic selection. Genetic algorithm, genetic programming, evolutionary programming. Implementations following Sims, Draves.</p>
-<p><strong>Readings:</strong> Readings from the course books. Original texts by McCormack, Holland, Koza. </p>
-<p><strong><em>Assignment 2:</em></strong> (Week 5) Evolutionary programming of images or sounds.</p>
-<h3>Week 6</h3>
-<p><strong>Topics:</strong> Development. Rewriting systems in computation, L-systems, shape grammars. Pattern formation. The evo-devo revolution, cell signaling and regulatory networks.</p>
-<p><strong>Readings:</strong> Selected readings from the course books. Original texts (Lindenmeyer, Turing). </p>
-<h3>Week 7</h3>
-<p><strong>Topics:</strong> Agents, agent-environment interaction. Behavioral systems in cognitive science, AI &amp; robotics. Random walks. Vehicles (Braitenberg), subsumption architecture (Brooks), chemotaxis. Implementations following Reas, chemotaxis.</p>
-<p><strong>Readings:</strong> Selected readings from the course books.  Original texts (Braitenberg, Brooks).</p>
-<p><strong><em>Assignment 3:</em></strong> Either a) morphology using an L-system or b) pattern formation with a reaction-diffusion system.</p>
-<h3>Weeks 8-9</h3>
-<p><strong>Topics:</strong> Collective behavior and intelligence, biological self-organization. Swarms and PSO, ant colony models (stigmergy and pheromone trails), collective optimization and distributed computing, game theory.
-Implementations: stigmergy, pheromone trails. </p>
-<p><strong>Readings:</strong> Selected readings from the course books.  </p>
-<p><strong><em>Assignment 3:</em></strong> (Week 9) Collective agent behaviors.</p>
-<h3>Week 10</h3>
-<p><strong>Topics:</strong> Neural models. The neuron, von Neumann, biological &amp; artificial plasticity, artificial neural networks (ANNs), supervised, unsupervised &amp; reinforcement learning.</p>
-<p><strong>Readings:</strong> Selected readings from the course books.</p>
-<h3>Week 11</h3>
-<p><strong>Topics:</strong> Advanced topics: Immune systems. Natural and artificial immunity, algorithms, shape spaces.</p>
-<p><strong>Readings:</strong> Selected readings from the course books.</p>
-<p><strong><em>Assignment:</em></strong> Final project proposal due. </p>
-<h3>Week 12</h3>
-<p><strong>Topics:</strong> Advanced topics: Programmable media and byte-code ecosystems. Corewars, Tierra, Viruses.</p>
-<p><strong>Readings:</strong> Selected readings from the course books. Original texts (Ray, Turing). </p>
-<h3>Week 13</h3>
-<p><strong>Topics:</strong> Advanced topics: Artificial chemistries.  Autonomous structure and self-organization, emergence of life. Implementation focus: Fontana’s alchemy.</p>
-<p><strong>Readings:</strong> Selected readings from the course books. Original texts (Fontana et al.). </p>
-<h3>Weeks 14+</h3>
-<p>Project development labs, final project presentation &amp; critique.</p>
+<p>A selection of key papers will be disseminated during the course, in addition to the online materials at <a href="http://grrrwaaa.github.io/gct633/">http://grrrwaaa.github.io/gct633/</a>.</p>
+<h2>Schedule</h2>
+<p>Not yet finalized.</p>
 </div>
 	
 	<div class="footer">
