--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
 <p>Assignments must be completed individually. Collaboration is permitted for final projects, however each student must be able to clearly identify which parts of the project they were responsible for. The final project may extend existing work from one (or more) of the assignments, but will be evaluated only according to the new contributions. </p>
 <h3>Grading</h3>
 <ul>
-<li>The followings evaluation criteria may change: 
-  A. Attendance:    10%<br>  B. Midterm exam:  10%<br>  C. Final exam:    10%<br>  D. Quiz:          0% <pre><code><span class="transposed_variable">E.</span> Report:        <span class="number">0</span><span class="comment">%    </span>
+<li>The followings evaluation criteria may change:<br>  A. Attendance:    10%<br>  B. Midterm exam:  10%<br>  C. Final exam:    10%<br>  D. Quiz:          0% <pre><code><span class="transposed_variable">E.</span> Report:        <span class="number">0</span><span class="comment">%    </span>
 <span class="transposed_variable">F.</span> Assignments:   <span class="number">30</span><span class="comment">%    </span>
 <span class="transposed_variable">G.</span> Project:       <span class="number">30</span><span class="comment">%    </span>
 <span class="transposed_variable">H.</span> Presentation:  <span class="number">10</span><span class="comment">% </span></code></pre>
