reverted accidental commits

--- a/rewriting.html
+++ b/rewriting.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset='utf-8'>
-<title>{{title}}</title>
+<title>Rewriting systems</title>
     
 <link href="css/site.css" media="screen" rel="stylesheet" type="text/css" />
 <link href="css/highlight.default.css" media="screen" rel="stylesheet" type="text/css" />
@@ -29,11 +29,15 @@
 		<a href="generative_art.html">Generative Art</a><br/>
 		<a href="cellular.html">Cellular Systems</a><br/>
 		<a href="agent.html">Agent Systems</a><br/>
-		<a href="symbol.html">Symbol Systems</a><br/>
 		<a href="evolutionary.html">Evolutionary Systems</a><br/>
+		<a href="symbol.html">Symbol Systems</a><br/>
+		<a href="network.html">Networks</a><br/>
 		
 	</div>
-	<div class="section">{{{body}}}</div>
+	<div class="section"><h1>Rewriting systems, L-systems</h1>
+<h2>Fractal structures do not need to use symbolic rewriting</h2>
+<p><a href="https://www.youtube.com/watch?v=FEnI_JPL6I0">Here</a> is an example of a fractal tree structure created through simple video feedback.</p>
+</div>
 	
 	<div class="footer">
 	<img src="img/snake6_small.jpg" alt="Artificial Natures"><br/>
